--- a/README
+++ b/README
@@ -1,1 +1,33 @@
+# asiofi
+
+C++ Boost.Asio language bindings for OFI libfabric.
+
 UNDER CONSTRUCTION
+
+## Dependencies
+
+Bindings (Core):
+
+- OFI libfabric
+- Boost.Asio
+
+Fabtests (Optional, enable with `-DBUILD_FABTESTS=ON`):
+
+- Google benchmark
+
+## Quickstart
+
+```bash
+cmake -DBOOST_ROOT=/path/to/boost \
+      -DOFI_ROOT=/path/to/libfabric \
+      -DBENCHMARK_ROOT=/path/to/google_benchmark \
+      -DCMAKE_INSTALL_PREFIX=./install \
+      -DBUILD_FABTESTS=ON /path/to/asiofi_source
+cmake --build .
+```
+
+## License
+
+GNU Lesser General Public Licence (LGPL) version 3, see [LICENSE](LICENSE).
+
+Copyright (C) 2018 GSI Helmholtzzentrum fuer Schwerionenforschung GmbH
